feat(singlesigDRT): write testscipts fix(singlesigDIP): update code, debug